# tray-icon-win

./: Cargo.toml  LICENSE-MIT  README.md
examples/: egui.rs  winit.rs
src/: error.rs  lib.rs
src/platform_impl/: icon.rs  mod.rs  util.rs
